--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,8 @@
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
       <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="images/slide2.jpeg" class="d-block w-100" alt="...">
+        <div class="carousel-item active" id="carousel-item1">
+          <img src="/images/slide2.jpeg" class="d-block w-100" alt="...">
           <div class="dark-overlay">
             <div class="carousel-caption d-none d-md-block text-center">
               <h2>Welcome to Ekiti State!</h2>
@@ -17,8 +17,8 @@
             </div>
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="images/slide1.jpeg" class="d-block w-100" alt="...">
+        <div class="carousel-item" id="carousel-item2">
+          <img src="/images/slide1.jpeg" class="d-block w-100" alt="...">
           <div class="dark-overlay">
             <div class="carousel-caption d-none d-md-block text-center">
               <h2>Explore Our Destinations</h2>
@@ -27,8 +27,8 @@
             </div>
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="images/slide3.jpeg" class="d-block w-100" alt="...">
+        <div class="carousel-item" id="carousel-item3">
+          <img src="/images/slide3.jpeg" class="d-block w-100" alt="...">
           <div class="dark-overlay">
             <div class="carousel-caption d-none d-md-block text-center">
               <h2>Plan Your Adventure</h2>
@@ -95,10 +95,10 @@
       <hr class="half-hr"> <h2 class="inline-block"> <i>Start Planning Your Trip Today</i></h2> <hr class="half-hr">
     </div>
 
-    <div class="bg-deepblue p-5 mx-5">
+    <div class="bg-deepblue p-5 mx-2">
       <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-12">
-          <img src="images/slide1.jpeg" width="500dp" alt="">
+        <div class="col-lg-6 col-md-6 col-sm-12 text-center">
+          <img src="/images/slide1.jpeg" id="Image" width="500dp" alt="">
         </div>
 
         <div class="col-lg-6 col-md-6 col-sm-12" style="margin: auto 0;">
