--- a/views/eatDetail.ejs
+++ b/views/eatDetail.ejs
@@ -19,7 +19,14 @@
             <a href="/eatReviews/<%=result[0].id%>/<%=result[0].name%>"> Reviews</a>
         </div>
 
-        <div><img src="<%=result[0].image%>" width="800px" alt="" class="py-3"></div>
+        <!-- <div><img src="<%=result[0].image%>" width="800px" alt="" class="py-3"></div> -->
+        <div id="carouselExampleControls" class="carousel carousel-fade py-3" data-bs-ride="carousel" data-bs-interval="3000">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="<%=result[0].image%>" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
 
         <a href="<%=result[0].website%>" class="btn btn-outline-primary">Website</a>
 
